--- a/index.html
+++ b/index.html
@@ -10,13 +10,21 @@
   <div class="stripes"></div>
   <div class="pink"></div>
 </div>
-<div class="card-stacks">
-    <div class="card"> </div>
-    <div class="card"></div>
-    <div class="card">
-        <h1> JOKE FILPPER</h1>
-    </div>
-    <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum atque ipsam obcaecati? Enim ducimus labore fugiat odit dolorem quibusdam inventore ullam, quod alias, sit reprehenderit itaque. Laudantium repellendus provident fugit!</P>
-</div>  
+ <div class="card">
+  <div class="card-header">
+    <h1>Cute Jokes</h1>
+  </div>
+  <div class="card-body">
+    <p>Lorem ipsum joke text here...</p>
+  </div>
+  <div class="card-footer">
+    <p>@Made by Tsi</p>
+  </div>
+</div>
+
+ <div class="controls">
+  <button id="prev">←</button>
+  <button id="next">→</button>
+</div>
 </body>
 </html>
