--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="background">
@@ -15,7 +16,7 @@
     <h1>Cute Jokes</h1>
   </div>
   <div class="card-body">
-    <p>Lorem ipsum joke text here...</p>
+     <p id="joke-text">Click next to see a joke!</p>
   </div>
   <div class="card-footer">
     <p>@Made by Tsi</p>
