--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </div>
  <div class="card">
   <div class="card-header">
-    <h1>Cute Jokes</h1>
+    <h1>Joke Flipper </h1>
   </div>
   <div class="card-body">
      <p id="joke-text">Click next to see a joke!</p>
